{
    "name": "InputsActions",
    "maps": [
        {
            "name": "Player",
            "id": "14bb221c-fc2c-453c-a021-ba41a8af4998",
            "actions": [
                {
                    "name": "ZoomValue",
                    "type": "Value",
                    "id": "83aed690-5381-4292-b67a-ca86e34ffb3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ClickButton",
                    "type": "Button",
                    "id": "8e6dfc17-5552-4d1a-91e1-c00b293162d2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DoubleClickButton",
                    "type": "Button",
                    "id": "a0c3497e-bd7a-4c9a-b2bb-3a1a63f52f0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "MultiTap",
                    "initialStateCheck": false
                },
                {
                    "name": "LongPressButton",
                    "type": "Button",
                    "id": "66145a7b-3fa2-4b91-9e79-b4a907eec7d3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerPosition",
                    "type": "PassThrough",
                    "id": "2dd3d8d3-9e5a-4b4c-9c31-d0c700a5134e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drag",
                    "type": "Value",
                    "id": "343aba71-8628-47cc-9091-9a9b6b9c2006",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "DragBuildMode",
                    "type": "Value",
                    "id": "6f678e6b-484c-4e01-a9f5-2c84b5a43492",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ca2c8752-ee04-487c-9175-4a90ce7891d2",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "ZoomValue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Pinch",
                    "id": "16992aac-a28d-4c53-8e6e-c80903a91968",
                    "path": "Pinch",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ZoomValue",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "m_FirstFingerPositionValueId",
                    "id": "c4960551-ab97-43c2-87b8-45ce1a2831e4",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ZoomValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "m_SecondFingerPositionValueId",
                    "id": "5179b7f8-d51a-4153-a650-22a2720d3522",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ZoomValue",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "cdd605dd-e4d8-4a36-8748-85c07065dc77",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "ClickButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f0fd21f-3910-48e7-8dde-cdb18b4443be",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "ClickButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14f6a610-98a3-4c82-89b2-bf8968f18374",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "LongPressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52b7bb6f-3a48-4991-b51d-c4d1185d0784",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "LongPressButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e269523-5df9-4ab6-a2da-8b7738d1f8c7",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "DoubleClickButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cdb8f697-2d3a-48e6-9027-a67084435114",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "DoubleClickButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a8a5110a-e146-47b5-82cc-44641903de12",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8f4e9f8a-a647-427f-b6ec-5fe5896262c5",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "MouseDrag",
                    "id": "27c70f53-47cb-4628-8cdd-69648dddcd9a",
                    "path": "Drag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "9d82472f-7eb7-4d28-a644-c215fec62659",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "CurrentPos",
                    "id": "c9d07509-221e-4c84-8007-aabaaf0084c1",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TouchDrag",
                    "id": "0b2d57fc-8735-48db-a443-1e7d930ba765",
                    "path": "Drag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "Drag",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "7c0ba52c-ec2d-4f1f-934c-67f1e5703519",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "CurrentPos",
                    "id": "c5ff47bd-6be5-48b3-99b5-aacf33559088",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "Drag",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MouseDrag",
                    "id": "8aaaba86-46e5-4bd5-b55b-3fbf42964246",
                    "path": "Drag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "DragBuildMode",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "8e5e21e7-7d90-4c66-a466-e1beda5f12ed",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "DragBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "CurrentPos",
                    "id": "d7a22523-701d-4012-95c6-a90b1ef2c2d7",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "DragBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "TouchDrag",
                    "id": "2c937e56-6ae3-4de6-ad77-108ef0cd78c6",
                    "path": "Drag",
                    "interactions": "MouseDrag",
                    "processors": "",
                    "groups": "",
                    "action": "DragBuildMode",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Button",
                    "id": "e07ba544-f49c-451a-b3b8-ceeb2e9bc534",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "DragBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "CurrentPos",
                    "id": "73301451-59e8-40da-9f89-399ce935ec7a",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "DragBuildMode",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}